# piaget-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs  notification.rs  notification_filter.rs  user.rs
src/cli/: choose_notif.rs  display_notification.rs  get_user_info.rs  mod.rs
src/driver/: get_notification_content.rs  get_notifications.rs  get_unread_notifications_number.rs  kill_drivers.rs  mod.rs  start_drivers.rs
src/validation/: mod.rs  verify_login.rs  verify_user.rs
