[package]
name = "piaget-cli"
version = "0.1.0"
edition = "2021"
authors = ["João Ribeiro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
inquire = "0.6.2"
serde_json = "1.0.107"
termimad = "0.25.5"
thirtyfour = "0.31.0"
tokio = "1.33.0"
