[package]
name = "piaget-cli"
version = "0.0.1"
edition = "2021"
description = "CLI tool to read notifications from inforestudante of Piaget"
repository = "https://github.com/anotherlusitano/piaget-cli"
authors = ["João Ribeiro"]
license = "MIT"
keywords = ["cli", "notifications", "email", "piaget", "inforestudante"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
inquire = "0.7.0"
serde_json = "1.0.107"
termimad = "0.29.1"
thirtyfour = "0.31.0"
tokio = "1.33.0"
